<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/donationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="56dp"
    tools:context="com.gratto.DonationFragment">

    <Button
        android:id="@+id/btnReturnInstitution"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#737373"
        android:drawableLeft="@drawable/ic_chevron_left_white"
        android:includeFontPadding="false"
        android:text="@string/btnReturn"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lblDonation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/lblDonation"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnLoggedDonation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtValor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#947DD8"
        android:text="@string/btnLoggedDonation"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnAnonymouslyDonation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnLoggedDonation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#947DD8"
        android:text="@string/btnAnonysmouslyDonation"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtInstitutionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/lblDonation"
        android:layout_marginTop="40dp"
        android:text="Nome da instituição" />

    <EditText
        android:id="@+id/txtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtInstitutionName"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtValor"
        android:inputType="numberDecimal"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lblDonationsDifferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnAnonymouslyDonation"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_chevron_right"
        android:text="@string/lblDonationsDifferences"
        android:textAlignment="viewEnd" />

</RelativeLayout>