<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="56dp"
    tools:context="com.gratto.FindFragment">

    <TextView
        android:id="@+id/lblFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/lblFind"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblFind"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:drawableRight="@drawable/ic_search"
        android:ems="10"
        android:hint="@string/txtFind"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:background="#947DD8"
        android:text="@string/btnFind"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lblWhy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtFind"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtFind"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_chevron_right"
        android:fadeScrollbars="false"
        android:gravity="center"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/lblWhy"
        android:textAlignment="textEnd"
        android:textSize="14sp" />

</RelativeLayout>