<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whydoadonationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="56dp"
    tools:context="com.gratto.WhyDoADonationFragment">

    <TextView
        android:id="@+id/lblWhyDoADonation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/lblWhyDoADonation"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lblWhyDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnReturnHome"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblWhyDoADonation"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/lblAboutDescription" />

    <Button
        android:id="@+id/btnReturnHome"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#737373"
        android:drawableLeft="@drawable/ic_chevron_left_white"
        android:includeFontPadding="false"
        android:text="@string/btnHome"
        android:textColor="#ffffff"
        android:textSize="14sp" />

</RelativeLayout>